antlrCToEng/src/CParser.java
// Generated from C.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__38=1, T__37=2, T__36=3, T__35=4, T__34=5, T__33=6, T__32=7, T__31=8, 
		T__30=9, T__29=10, T__28=11, T__27=12, T__26=13, T__25=14, T__24=15, T__23=16, 
		T__22=17, T__21=18, T__20=19, T__19=20, T__18=21, T__17=22, T__16=23, 
		T__15=24, T__14=25, T__13=26, T__12=27, T__11=28, T__10=29, T__9=30, T__8=31, 
		T__7=32, T__6=33, T__5=34, T__4=35, T__3=36, T__2=37, T__1=38, T__0=39, 
		LINE_COMMENT=40, COMMENT=41, HEADFILE=42, HEAD_DECLARE=43, TYPE=44, STRING=45, 
		ANYSTRING=46, INTEGER=47, FLOAT_NUMBER=48, BOOL_NUMBER=49, WS=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'return'", "'#include'", "'!='", "'while'", "'||'", 
		"';'", "'{'", "'&&'", "'<<'", "'>>'", "'='", "'}'", "'for'", "'if'", "'int main()'", 
		"'\"'", "'else if'", "'('", "'*'", "','", "'.'", "'['", "'=='", "'cin'", 
		"'--'", "'++'", "'<'", "']'", "'>'", "'!'", "'else'", "'typedef'", "')'", 
		"'+'", "'struct'", "'cout'", "'-'", "'endl'", "LINE_COMMENT", "COMMENT", 
		"HEADFILE", "'using namespace std;'", "TYPE", "STRING", "ANYSTRING", "INTEGER", 
		"FLOAT_NUMBER", "BOOL_NUMBER", "WS"
	};
	public static final int
		RULE_c = 0, RULE_start = 1, RULE_global = 2, RULE_func = 3, RULE_bot = 4, 
		RULE_both = 5, RULE_structure = 6, RULE_structure_body = 7, RULE_struct_body_body = 8, 
		RULE_defvar = 9, RULE_tem = 10, RULE_assign = 11, RULE_assign_rear = 12, 
		RULE_defvarfun = 13, RULE_value = 14, RULE_expr = 15, RULE_addexpr = 16, 
		RULE_mulexpr = 17, RULE_atom = 18, RULE_main = 19, RULE_stat = 20, RULE_block = 21, 
		RULE_return_val = 22, RULE_in = 23, RULE_out = 24, RULE_call = 25, RULE_if_lable = 26, 
		RULE_if_part = 27, RULE_else_if_part = 28, RULE_else_part = 29, RULE_condition = 30, 
		RULE_and = 31, RULE_atomc = 32, RULE_conexpr = 33, RULE_condition_part = 34, 
		RULE_for_lable = 35, RULE_while_lable = 36;
	public static final String[] ruleNames = {
		"c", "start", "global", "func", "bot", "both", "structure", "structure_body", 
		"struct_body_body", "defvar", "tem", "assign", "assign_rear", "defvarfun", 
		"value", "expr", "addexpr", "mulexpr", "atom", "main", "stat", "block", 
		"return_val", "in", "out", "call", "if_lable", "if_part", "else_if_part", 
		"else_part", "condition", "and", "atomc", "conexpr", "condition_part", 
		"for_lable", "while_lable"
	};

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_c);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); start();
			setState(75); global();
			setState(76); main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode HEAD_DECLARE() { return getToken(CParser.HEAD_DECLARE, 0); }
		public List<TerminalNode> HEADFILE() { return getTokens(CParser.HEADFILE); }
		public TerminalNode HEADFILE(int i) {
			return getToken(CParser.HEADFILE, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__36) {
				{
				{
				setState(78); match(T__36);
				setState(79); match(T__11);
				setState(80); match(HEADFILE);
				setState(81); match(T__9);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(87); match(HEAD_DECLARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public List<StructureContext> structure() {
			return getRuleContexts(StructureContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public StructureContext structure(int i) {
			return getRuleContext(StructureContext.class,i);
		}
		public BothContext both(int i) {
			return getRuleContext(BothContext.class,i);
		}
		public List<BothContext> both() {
			return getRuleContexts(BothContext.class);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__34) | (1L << T__25) | (1L << T__24) | (1L << T__14) | (1L << T__6) | (1L << T__3) | (1L << T__2) | (1L << TYPE) | (1L << STRING))) != 0)) {
				{
				setState(92);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(89); func();
					}
					break;
				case 2:
					{
					setState(90); both();
					}
					break;
				case 3:
					{
					setState(91); structure();
					}
					break;
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public List<DefvarfunContext> defvarfun() {
			return getRuleContexts(DefvarfunContext.class);
		}
		public TerminalNode TYPE() { return getToken(CParser.TYPE, 0); }
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public DefvarfunContext defvarfun(int i) {
			return getRuleContext(DefvarfunContext.class,i);
		}
		public BothContext both(int i) {
			return getRuleContext(BothContext.class,i);
		}
		public List<BothContext> both() {
			return getRuleContexts(BothContext.class);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); match(TYPE);
			setState(98); match(STRING);
			setState(99); match(T__20);
			setState(101);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(100); defvarfun();
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(103); match(T__18);
				setState(104); defvarfun();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(T__5);
			setState(111); match(T__31);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__34) | (1L << T__25) | (1L << T__24) | (1L << T__14) | (1L << T__2) | (1L << TYPE) | (1L << STRING))) != 0)) {
				{
				{
				setState(112); both();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118); match(T__26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BotContext extends ParserRuleContext {
		public BothContext both(int i) {
			return getRuleContext(BothContext.class,i);
		}
		public List<BothContext> both() {
			return getRuleContexts(BothContext.class);
		}
		public BotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterBot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitBot(this);
		}
	}

	public final BotContext bot() throws RecognitionException {
		BotContext _localctx = new BotContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bot);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(T__31);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__34) | (1L << T__25) | (1L << T__24) | (1L << T__14) | (1L << T__2) | (1L << TYPE) | (1L << STRING))) != 0)) {
				{
				{
				setState(121); both();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127); match(T__26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BothContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BothContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_both; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterBoth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitBoth(this);
		}
	}

	public final BothContext both() throws RecognitionException {
		BothContext _localctx = new BothContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_both);
		try {
			setState(133);
			switch (_input.LA(1)) {
			case T__37:
			case T__14:
			case T__2:
			case TYPE:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); stat();
				setState(130); match(T__32);
				}
				break;
			case T__34:
			case T__25:
			case T__24:
				enterOuterAlt(_localctx, 2);
				{
				setState(132); block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public TerminalNode STRING(int i) {
			return getToken(CParser.STRING, i);
		}
		public TerminalNode INTEGER() { return getToken(CParser.INTEGER, 0); }
		public List<TerminalNode> STRING() { return getTokens(CParser.STRING); }
		public Structure_bodyContext structure_body() {
			return getRuleContext(Structure_bodyContext.class,0);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStructure(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_structure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(135); match(T__6);
				}
			}

			setState(138); match(T__3);
			setState(139); match(STRING);
			setState(140); structure_body();
			setState(147);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(141); match(STRING);
				setState(145);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(142); match(T__16);
					setState(143); match(INTEGER);
					setState(144); match(T__10);
					}
				}

				}
			}

			setState(149); match(T__32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Structure_bodyContext extends ParserRuleContext {
		public Struct_body_bodyContext struct_body_body(int i) {
			return getRuleContext(Struct_body_bodyContext.class,i);
		}
		public List<Struct_body_bodyContext> struct_body_body() {
			return getRuleContexts(Struct_body_bodyContext.class);
		}
		public Structure_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStructure_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStructure_body(this);
		}
	}

	public final Structure_bodyContext structure_body() throws RecognitionException {
		Structure_bodyContext _localctx = new Structure_bodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structure_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); match(T__31);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(152); struct_body_body();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158); match(T__26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_body_bodyContext extends ParserRuleContext {
		public DefvarContext defvar() {
			return getRuleContext(DefvarContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public Struct_body_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_body_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStruct_body_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStruct_body_body(this);
		}
	}

	public final Struct_body_bodyContext struct_body_body() throws RecognitionException {
		Struct_body_bodyContext _localctx = new Struct_body_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_struct_body_body);
		try {
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160); defvar();
				setState(161); match(T__32);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(163); func();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefvarContext extends ParserRuleContext {
		public TemContext tem(int i) {
			return getRuleContext(TemContext.class,i);
		}
		public TerminalNode TYPE() { return getToken(CParser.TYPE, 0); }
		public List<TemContext> tem() {
			return getRuleContexts(TemContext.class);
		}
		public DefvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDefvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDefvar(this);
		}
	}

	public final DefvarContext defvar() throws RecognitionException {
		DefvarContext _localctx = new DefvarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_defvar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(TYPE);
			setState(167); tem();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(168); match(T__18);
				setState(169); tem();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemContext extends ParserRuleContext {
		public TemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tem; }
	 
		public TemContext() { }
		public void copyFrom(TemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefineassignContext extends TemContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DefineassignContext(TemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDefineassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDefineassign(this);
		}
	}
	public static class DefinarrayvarContext extends TemContext {
		public List<TerminalNode> INTEGER() { return getTokens(CParser.INTEGER); }
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public TerminalNode INTEGER(int i) {
			return getToken(CParser.INTEGER, i);
		}
		public DefinarrayvarContext(TemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDefinarrayvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDefinarrayvar(this);
		}
	}
	public static class DesimplevarContext extends TemContext {
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public DesimplevarContext(TemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDesimplevar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDesimplevar(this);
		}
	}

	public final TemContext tem() throws RecognitionException {
		TemContext _localctx = new TemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tem);
		int _la;
		try {
			setState(186);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				_localctx = new DefineassignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(175); assign();
				}
				break;
			case 2:
				_localctx = new DesimplevarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(176); match(STRING);
				}
				break;
			case 3:
				_localctx = new DefinarrayvarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(177); match(STRING);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(178); match(T__16);
					setState(179); match(INTEGER);
					setState(180); match(T__10);
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public Assign_rearContext assign_rear() {
			return getRuleContext(Assign_rearContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(188); match(STRING);
				setState(189); match(T__17);
				}
				break;
			}
			setState(192); assign_rear();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_rearContext extends ParserRuleContext {
		public Assign_rearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_rear; }
	 
		public Assign_rearContext() { }
		public void copyFrom(Assign_rearContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SelfdecreaseContext extends Assign_rearContext {
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public SelfdecreaseContext(Assign_rearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterSelfdecrease(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitSelfdecrease(this);
		}
	}
	public static class ArrayContext extends Assign_rearContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> INTEGER() { return getTokens(CParser.INTEGER); }
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public TerminalNode INTEGER(int i) {
			return getToken(CParser.INTEGER, i);
		}
		public ArrayContext(Assign_rearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitArray(this);
		}
	}
	public static class VariableContext extends Assign_rearContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public VariableContext(Assign_rearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitVariable(this);
		}
	}
	public static class SelfincreaseContext extends Assign_rearContext {
		public TerminalNode STRING() { return getToken(CParser.STRING, 0); }
		public SelfincreaseContext(Assign_rearContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterSelfincrease(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitSelfincrease(this);
		}
	}

	public final Assign_rearContext assign_rear() throws RecognitionException {
		Assign_rearContext _localctx = new Assign_rearContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assign_rear);
		int _la;
		try {
			setState(212);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				_localctx = new VariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(194); match(STRING);
				setState(195); match(T__27);
				setState(196); value();
				}
				break;
			case 2:
				_localctx = new ArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(197); match(STRING);
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(198); match(T__16);
					setState(199); match(INTEGER);
					setState(200); match(T__10);
					}
					}
					setState(205);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(206); match(T__27);
				setState(207); value();
				}
				break;
			case 3:
				_localctx = new SelfincreaseContext(_localctx);
